fix(finance): prevent 500 error in batch-unpublish and unpublish caused by sorting NPE and unmodifiable list stream